# OpenSourceIrisRecognition

./: .gitignore  README.md
evaluations/C++-IREX-X-sanity-check/: readme.md
evaluations/C++-IREX-X-sanity-check/CRYPTS/: crypts_pairs.txt
evaluations/C++-IREX-X-sanity-check/Codes/: generate_plots.py
evaluations/C++-IREX-X-sanity-check/HDBIF/: hdbif_pairs.txt
evaluations/paper-evaluation-comparison-pairs/: README.md
evaluations/paper-evaluation-comparison-pairs/CASIA-Iris-Lamp/: genuine.csv  imposter.csv
evaluations/paper-evaluation-comparison-pairs/CASIA-Iris-Thousand/: genuine.csv
evaluations/paper-evaluation-comparison-pairs/IIITD-CLI/: genuine.csv  imposter.csv
evaluations/paper-evaluation-comparison-pairs/IITD-Iris/: genuine.csv  imposter.csv
evaluations/paper-evaluation-comparison-pairs/NDIris3D/: genuine.csv  imposter.csv
evaluations/paper-evaluation-comparison-pairs/VII-Q-R2/: genuine.csv  imposter.csv
evaluations/paper-evaluation-comparison-pairs/Warsaw-Biobase-PostMortem-Iris/: genuine.csv
methods/ArcIris/C++-IREX-X-submission/: CMakeLists.txt  README.md  build.sh
methods/ArcIris/C++-IREX-X-submission/include/: arcirisimplfrvt1N.h
methods/ArcIris/C++-IREX-X-submission/src/: arcirisimplfrvt1N.cpp
methods/ArcIris/Python/: 1N_matching.py  arciris.py  cfg_baseline.yaml  find_1N_polar.py  readme.md
methods/ArcIris/Python/models/: readme.txt
methods/ArcIris/Python/modules/: irisRecognition.py  network.py  utils.py
methods/ArcIris/Python/templates/: synthetic1_tmpl.npz  synthetic2_tmpl.npz  synthetic3_tmpl.npz
methods/CRYPTS/C++-IREX-X-submission/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh
methods/CRYPTS/C++-IREX-X-submission/include/: cryptsimplfrvt1N.h  ortools_linprog.h
methods/CRYPTS/C++-IREX-X-submission/src/: cryptsimplfrvt1N.cpp  ortools_linprog.cpp
methods/CanthiDetector/Python/: README.md  environment.yaml  inference.py  inference_cpu.sh  inference_cuda.sh  train.py  train.sh
methods/CanthiDetector/Python/inference_output/: predictions.csv
methods/CanthiDetector/Python/metadata/: corner_labels.csv
methods/CanthiDetector/Python/models/: readme.txt
methods/HDBIF/C++-IREX-X-submission/: CMakeLists.txt  README.md  build.sh
methods/HDBIF/C++-IREX-X-submission/include/: hdbifimplfrvt1N.h
methods/HDBIF/C++-IREX-X-submission/src/: hdbifimplfrvt1N.cpp
methods/HDBIF/Matlab/: hdbif.m  imageList.txt  imageListScores.txt  pmIrisBSIFCode.m  pmIrisBSIFMatch.m  pmIrisCartesianToPolar.m  pmIrisCircApprox.m  pmIrisSegment.m  readme.md
methods/HDBIF/Matlab/data/: readme.txt
methods/HDBIF/Matlab/dataProcessed/: readme.txt
methods/HDBIF/Matlab/filters_txt/: readme.txt
methods/HDBIF/Python/: cfg.yaml  hdbif.py  minimal_environment.yml  readme.md
methods/TripletIris/C++-IREX-X-submission/: CMakeLists.txt  README.md  build.sh
methods/TripletIris/Python/: cfg_baseline.yaml  macos_environment.yml  readme.md  tripletiris.py
methods/TripletNN/C++-IREX-X-submission/: CMakeLists.txt  README.md  build.sh
methods/TripletNN/Python/: cfg_baseline.yaml  macos_environment.yml  minimal_environment.yml  readme.md  tripletnn.py
methods/iris-fm-tools/Python/: README.md  environment.yml  inference.py  train.py
(+218 files in other folders)
